# Python-Template

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  AGENT.md  AGENTS.md  CLAUDE.md  Makefile  Procfile  README.md  SECURITY_AUDIT.md  TODO.md  UNNECESSARY_CODE_GUIDELINE.md  investigation_report.md  main.py  onboard.py  prd.json  prek.toml  pyproject.toml  pytest.ini  session-ses_4047.md  temp_script.py  test_pydantic_settings.py  whitelist.txt
.claude/: settings.json
.claude/agents/: folder-refactor-advisor.md
.claude/hooks/: enforce-makefile.sh
.claude/rules/: codex-claude-sync.md
.claude/skills/: code-quality.md
.codex/agents/: folder-refactor-advisor.toml
.cursor/: docs-scope.yml
.cursor/rules/: coding_style.mdc  commit_msg.mdc  common.mdc  documentation.mdc  file_length.mdc  github_actions.mdc  global_config.mdc  llm.mdc  logging.mdc  tests.mdc
.devcontainer/: devcontainer.json
.githooks/: post-commit  pre-commit
.github/workflows/: a_test_target_tests.yml  agents_validate.yaml  auto-delete-branch.yml  cursor_update_docs.yml  dast.yml  docs-lint.yaml  folder-size.yaml  large-files.yaml  test.yml  (+8 more)
alembic/: env.py  rls_support.py
common/: __init__.py  config_models.py  db_uri_resolver.py  flags.py  global_config.py  global_config.yaml  subscription_config.py
docs/: AGENT_API.md  DOCUMENTATION_SYSTEM.md  REFERRALS.md  agent_tool_call_streaming.md  decorating_markdown.md  ops.md  package.json  translation-guide.md
global_config/: __init__.py  global_config.py  global_config.yaml
init/: Makefile  generate_banner.py  generate_logo.py
scripts/: check_ai_writing.py  check_file_length.py  check_folder_sizes.sh  check_large_files.sh  ralph.sh  show_dspy.py  sync_agent_config.py  validate_agents_md.py  validate_models.py
src/: server.py
tasks/: prd-onboarding-cli.md
tests/: README.md  config.yaml  conftest.py  test_class.py  test_cli.py  test_daily_limits.py  test_dspy_inference_robustness.py  test_logging_security.py  test_logging_thread_safety.py  test_skeleton.py  test_template.py  test_version.py  test_workos_auth.py
(+131 files in other folders)
