[project]
name = "python-template"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Miyamura80", email = "eitomiyamura@gmail.com" }
]
dependencies = [
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "human-id>=0.2.0",
    "import-linter>=2.0.0",
    "pytest>=8.3.3",
    "pytest-xdist>=3.6.1",
    "termcolor>=2.4.0",
    "loguru>=0.7.3",
    "vulture>=2.14",
    "dspy>=2.6.24",
    "langfuse>=2.60.5",
    "litellm>=1.70.0",
    "tenacity>=9.1.2",
    "pillow>=11.2.1",
    "google-genai>=1.15.0",
    "ty>=0.0.1a9",
    "pytest-env>=1.1.5",
    "pydantic-settings>=2.12.0",
    "pytest-cov>=7.0.0",
    "pytest-repeat>=0.9.4",
    "pylint>=3.3.0",
    "deptry>=0.24.0",
    "openfeature-sdk>=0.8.4",
    "scrubadub>=2.0.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_template"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "C901", "FIX"]
ignore = ["E501", "UP015", "B008"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ty]

[tool.ty.rules]
possibly-unresolved-reference = "error"

[tool.ty.terminal]
error-on-warning = true

[tool.ty.environment]
python-version = "3.12"

[tool.vulture]
exclude = [
    ".venv/",
    ".uv-cache/",
    ".uv_cache/",
    ".uv_tools/",
    ".uv-tools/",
    "docs/",
    "node_modules/",
    "tests/test_logging_security.py",
    "tests/test_logging_thread_safety.py",
    "tests/test_template.py",
    "utils/llm/",
    "common/",
    "src/utils/logging_config.py",
    "src/utils/context.py",
    "tests/conftest.py",
    "init/"
]

[tool.coverage.run]
branch = true
source = ["src", "common", "utils"]
omit = [
    "tests/*",
    "docs/*",
    "init/*",
    "alembic/*",
]

[tool.coverage.report]
show_missing = true
